avoid overflow from drop down

--- a/src/styles.css
+++ b/src/styles.css
@@ -80,6 +80,10 @@ body {
     .status-bar-version {
         display: none;
     }
+
+    .status-bar-viewport {
+        display: none;
+    }
 }
 
 .list-item {
